# Oxidizer

./: .gitignore  Cargo.toml  SIMULATOR_USAGE.md  example.mdfs  sounds.json
.github/: CODEOWNERS
bms_data/: Cargo.toml
bms_data/src/: lib.rs  model.rs  profile.rs  result.rs
docs/: MDFS_DSL-and-Compiler_Spec.md  Quickstart.md  Runner_Requirements.md  architecture_design_document.md  concept_requirements.md
examples/: minimal.mdfs  mixed_long.mdfs  sounds.json
mdf_runner/: Cargo.toml
mdf_runner/examples/: print_meta.rs
mdf_runner/src/: lib.rs
mdf_schema/: Cargo.toml
mdf_schema/src/: lib.rs
mdfs_cli/: Cargo.toml
mdfs_cli/src/: main.rs  simulate.rs
mdfs_cli/tests/: cli_output.rs
mdfs_compiler/: Cargo.toml
mdfs_compiler/src/: error.rs  generate.rs  lib.rs  parser.rs  resources.rs  tests.rs  time_map.rs
oxidizer_core/: Cargo.toml
oxidizer_core/examples/: audio_check.rs
oxidizer_core/src/: lib.rs  main.rs
oxidizer_core/src/audio/: assets.rs  backend.rs  mixer.rs  mod.rs
oxidizer_core/src/chart/: mod.rs
oxidizer_core/src/gameplay/: judge.rs
oxidizer_core/src/input/: events.rs  mod.rs
oxidizer_core/src/time/: conductor.rs
oxidizer_core/tests/: audio_assets_test.rs  conductor_test.rs  input_queue_test.rs  judge_logic_test.rs  mixer_logic_test.rs
tasks/: phase1_audio_core.md  phase2_input_and_io.md  phase3_visuals.md  phase4_gameplay.md  phase5_bms_integration.md
