[workspace]
resolver = "2"
members = [
  "mdf_schema",
  "mdfs_compiler",
  "mdfs_cli", "mdf_runner",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
